<resources>
    <string name="app_name">Hotelook</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_description">Hotel Description</string>
    <string name="hotel_name">Hotel Name:</string>
    <string name="hotel_name_">Hotel Name</string>
</resources>