<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.EditHotelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_edit_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_background"
                android:backgroundTint="@color/white"
                android:elevation="20dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Edit Hotel Details"
                app:titleMarginStart="120dp"
                app:titleTextColor="@color/black" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_hotel_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_hotel_name"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/curved_edge_background"
                android:backgroundTint="@color/white"
                android:hint="@string/hotel_name_"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/hotel_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_hotel_image" />

            <EditText
                android:id="@+id/edit_hotel_description"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:maxHeight="80dp"
                android:layout_marginTop="16dp"
                android:inputType="textMultiLine"
                android:hint="@string/hotel_description"
                android:maxLines="5"
                android:background="@drawable/curved_edge_background"
                android:backgroundTint="@color/white"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="Description:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_hotel_name" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="Price:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_hotel_address" />

            <EditText
                android:id="@+id/edit_hotel_price"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/curved_edge_background"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_currency_rupee_24"
                android:drawablePadding="5dp"
                android:hint="Hotel Price"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:minHeight="40dp"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="Address:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_hotel_description" />

            <EditText
                android:id="@+id/edit_hotel_address"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/curved_edge_background"
                android:backgroundTint="@color/white"
                android:hint="Hotel Address"
                android:inputType="textMultiLine"
                android:maxHeight="80dp"
                android:maxLines="5"
                android:minHeight="40dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_hotel"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="200dp"
                android:background="@drawable/curved_edge_background"
                android:backgroundTint="@color/black"
                android:text="update"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/edit_hotel_price"
                app:layout_constraintStart_toStartOf="@+id/edit_hotel_price"
                app:layout_constraintTop_toBottomOf="@+id/edit_hotel_price" />

            <ImageButton
                android:id="@+id/edit_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/transparent"
                android:elevation="20dp"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>